--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "homepage": "https://github.com/njneubauer/MyFlix-Client#readme",
   "dependencies": {
+    "axios": "^0.24.0",
+    "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
