--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   "dependencies": {
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.1",
+    "parcel": "^2.0.0-rc.0",
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.1"
+    "@parcel/transformer-image": "^2.0.0-rc.0",
+    "@parcel/transformer-sass": "^2.0.0-rc.0"
   }
 }
